--- a/Midterm_Paper.tex
+++ b/Midterm_Paper.tex
@@ -143,11 +143,30 @@ the cognitive task group or the no task (control) group.
 
 \subsection{Data analysis}\label{data-analysis}
 
-We used R (Version 3.5.2; R Core Team, 2018) and the R-package
-\emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018) for all our
-analyses.
+We used R (Version 3.5.2; R Core Team, 2018) and the R-packages
+\emph{data.table} (Version 1.12.2; Dowle \& Srinivasan, 2019),
+\emph{devtools} (Version 2.0.1; Wickham, Hester, \& Chang, 2018),
+\emph{dplyr} (Version 0.8.0.1; Wickham, François, Henry, \& Müller,
+2019), \emph{ggplot2} (Version 3.1.0; Wickham, 2016), \emph{papaja}
+(Version 0.1.0.9842; Aust \& Barth, 2018), \emph{summarytools} (Version
+0.9.2; Comtois, 2019), \emph{usethis} (Version 1.4.0; Wickham \& Bryan,
+2018), and \emph{xtable} (Version 1.8.3; Dahl, Scott, Roosen, Magnusson,
+\& Swinton, 2018) for all our analyses.
 
 \section{Results}\label{results}
+
+\begin{figure}
+\centering
+\includegraphics{Midterm_Paper_files/figure-latex/unnamed-chunk-1-1.pdf}
+\caption{}
+\end{figure}
+
+Using a between subjects one-factor ANOVA, with intervention type as the
+independent variable, I did not find that there was a significant
+difference between the four intervention groups (No-task control,
+Reactivation Plus tetris, Tetris only, Reactivation only). There was no
+main effect of intervention type \(F(1, 70) = 0.11\),
+\(\mathit{MSE} = 11.42\), \(p = .744\), \(\hat{\eta}^2_G = .002\).
 
 \section{Discussion}\label{discussion}
 
@@ -163,10 +182,44 @@ analyses.
 Aust, F., \& Barth, M. (2018). \emph{papaja: Create APA manuscripts with
 R Markdown}. Retrieved from \url{https://github.com/crsh/papaja}
 
+\hypertarget{ref-R-summarytools}{}
+Comtois, D. (2019). \emph{Summarytools: Tools to quickly and neatly
+summarize data}. Retrieved from
+\url{https://CRAN.R-project.org/package=summarytools}
+
+\hypertarget{ref-R-xtable}{}
+Dahl, D. B., Scott, D., Roosen, C., Magnusson, A., \& Swinton, J.
+(2018). \emph{Xtable: Export tables to latex or html}. Retrieved from
+\url{https://CRAN.R-project.org/package=xtable}
+
+\hypertarget{ref-R-data.table}{}
+Dowle, M., \& Srinivasan, A. (2019). \emph{Data.table: Extension of
+`data.frame`}. Retrieved from
+\url{https://CRAN.R-project.org/package=data.table}
+
 \hypertarget{ref-R-base}{}
 R Core Team. (2018). \emph{R: A language and environment for statistical
 computing}. Vienna, Austria: R Foundation for Statistical Computing.
 Retrieved from \url{https://www.R-project.org/}
+
+\hypertarget{ref-R-ggplot2}{}
+Wickham, H. (2016). \emph{Ggplot2: Elegant graphics for data analysis}.
+Springer-Verlag New York. Retrieved from \url{http://ggplot2.org}
+
+\hypertarget{ref-R-usethis}{}
+Wickham, H., \& Bryan, J. (2018). \emph{Usethis: Automate package and
+project setup}. Retrieved from
+\url{https://CRAN.R-project.org/package=usethis}
+
+\hypertarget{ref-R-dplyr}{}
+Wickham, H., François, R., Henry, L., \& Müller, K. (2019). \emph{Dplyr:
+A grammar of data manipulation}. Retrieved from
+\url{https://CRAN.R-project.org/package=dplyr}
+
+\hypertarget{ref-R-devtools}{}
+Wickham, H., Hester, J., \& Chang, W. (2018). \emph{Devtools: Tools to
+make developing r packages easier}. Retrieved from
+\url{https://CRAN.R-project.org/package=devtools}
 
 \endgroup
 
