--- a/r-references.bib
+++ b/r-references.bib
@@ -13,3 +13,53 @@
   note = {R package version 0.1.0.9842},
   url = {https://github.com/crsh/papaja},
 }
+@Manual{R-data.table,
+  title = {data.table: Extension of `data.frame`},
+  author = {Matt Dowle and Arun Srinivasan},
+  year = {2019},
+  note = {R package version 1.12.2},
+  url = {https://CRAN.R-project.org/package=data.table},
+}
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  year = {2018},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2019},
+  note = {R package version 0.8.0.1},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+@Book{R-ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {http://ggplot2.org},
+}
+@Manual{R-summarytools,
+  title = {summarytools: Tools to Quickly and Neatly Summarize Data},
+  author = {Dominic Comtois},
+  year = {2019},
+  note = {R package version 0.9.2},
+  url = {https://CRAN.R-project.org/package=summarytools},
+}
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2018},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=usethis},
+}
+@Manual{R-xtable,
+  title = {xtable: Export Tables to LaTeX or HTML},
+  author = {David B. Dahl and David Scott and Charles Roosen and Arni Magnusson and Jonathan Swinton},
+  year = {2018},
+  note = {R package version 1.8-3},
+  url = {https://CRAN.R-project.org/package=xtable},
+}
