--- a/Midterm_Paper.tex
+++ b/Midterm_Paper.tex
@@ -153,8 +153,8 @@ Using a between subjects one-factor ANOVA, with intervention type as the
 independent variable, I did not find that there was a significant
 difference between the four intervention groups (No-task control,
 Reactivation Plus tetris, Tetris only, Reactivation only). There was no
-main effect of intervention type \(F(1, 70) = 0.11\),
-\(\mathit{MSE} = 11.42\), \(p = .744\), \(\hat{\eta}^2_G = .002\). There
+main effect of intervention type \(F(3, 68) = 3.79\),
+\(\mathit{MSE} = 10.09\), \(p = .014\), \(\hat{\eta}^2_G = .143\). There
 was no significant reduction in traumatic memory reconsolidation between
 any of the task groups.
 
@@ -173,6 +173,9 @@ reality there is an effect.
 \newpage
 
 \section{Power Analysis}\label{power-analysis}
+
+A power analysis was conducted, and the graph is shown on the final page
+of this paper.
 
 \begin{figure}
 \centering
