--- a/Midterm_Paper.tex
+++ b/Midterm_Paper.tex
@@ -150,25 +150,19 @@ the cognitive task group or the no task (control) group.
 \end{figure}
 
 Using a between subjects one-factor ANOVA, with intervention type as the
-independent variable, I did not find that there was a significant
-difference between the four intervention groups (No-task control,
-Reactivation Plus tetris, Tetris only, Reactivation only). There was no
-main effect of intervention type \(F(3, 68) = 3.79\),
-\(\mathit{MSE} = 10.09\), \(p = .014\), \(\hat{\eta}^2_G = .143\). There
-was no significant reduction in traumatic memory reconsolidation between
-any of the task groups.
+independent variable, there was a significant difference between the
+different task groups (No-task control, Reactivation Plus tetris, Tetris
+only, Reactivation only). There was a main effect of interevention type
+\(F(3, 68) = 3.79\), \(\mathit{MSE} = 10.09\), \(p = .014\),
+\(\hat{\eta}^2_G = .143\). There was a significant reduction in
+traumatic memory reconsolidation for the reactivation and tetris group.
 
 \section{Discussion}\label{discussion}
 
-The omnibus one-factor ANOVA that was conducted did not show a
-significant difference between any of the groups. This was not the
-finding of the original paper. There are a number of possible reasons
-why this occured. Firstly, when conducting any type of null hypothesis
-testing, there is always a chance that a Type I error has been committed
-and the significant value was found only due to chance. Additionally,
-the reanalysis that I made could have committed a Type II error, where I
-did not reject the null (and claimed that there was an effect) when in
-reality there is an effect.
+The omnibus ANOVA that was conducted replicated the results that were
+found in James et al. (2015). When traumatic memory reactivation was
+interrupted by a cognitive task (tetris) there was an overall reduction
+in intrusive memories.
 
 \newpage
 
