--- a/Midterm Paper.Rmd
+++ b/Midterm Paper.Rmd
@@ -73,6 +73,10 @@ library(ggplot2)
 midterm_data <- fread("https://raw.githubusercontent.com/CrumpLab/statisticsLab/master/data/Jamesetal2015Experiment2.csv")
 
 midterm_data$Condition <- as.factor(midterm_data$Condition)
+levels(midterm_data$Condition) <- c("Control",
+                                "Reactivation+Tetris", 
+                                "Tetris_only",
+                                "Reactivation_only")
 library(summarytools)
 
 #view(dfSummary(midterm_data))
@@ -99,11 +103,11 @@ apa_aov <- apa_print(summary(anova_results))
 
 ```
 
-Using a between subjects one-factor ANOVA, with intervention type as the independent variable, I did not find that there was a significant difference between the four intervention groups (No-task control, Reactivation Plus tetris, Tetris only, Reactivation only). There was no main effect of intervention type `r apa_aov$full_result$Condition`. There was no significant reduction in traumatic memory reconsolidation between any of the task groups.
+Using a between subjects one-factor ANOVA, with intervention type as the independent variable, there was a significant difference between the different task groups (No-task control, Reactivation Plus tetris, Tetris only, Reactivation only). There was a main effect of interevention type `r apa_aov$full_result$Condition`. There was a significant reduction in traumatic memory reconsolidation for the reactivation and tetris group. 
 
 # Discussion
 
-The omnibus one-factor ANOVA that was conducted did not show a significant difference between any of the groups. This was not the finding of the original paper. There are a number of possible reasons why this occured. Firstly, when conducting any type of null hypothesis testing, there is always a chance that a Type I error has been committed and the significant value was found only due to chance. Additionally, the reanalysis that I made could have committed a Type II error, where I did not reject the null (and claimed that there was an effect) when in reality there is an effect. 
+The omnibus ANOVA that was conducted replicated the results that were found in @james2015computer. When traumatic memory reactivation was interrupted by a cognitive task (tetris) there was an overall reduction in intrusive memories. 
 
 \newpage
 
@@ -142,7 +146,9 @@ plot_df <- data.frame(effect_sizes,power)
 ggplot(plot_df, aes(x=effect_sizes,
                     y=power))+
   geom_point()+
-  geom_line()
+  geom_line()+
+  ylab("Power")
+  xlab("Effect Size")
 ```
 
 # References
